crates/rwkv-derive/tests/ui/fail/config_builder_duplicate_raw.rs
use rwkv_derive::ConfigBuilder;

#[derive(ConfigBuilder)]
#[config_builder(
    raw = "crate::RawConfig",
    raw = "crate::OtherRawConfig",
    cell = "CONFIG"
)]
pub struct FinalConfig {
    value: usize,
}

fn main() {}
